test_suite/alan-2022-examples/failing/006430_mutation.alan
source T begin leave 09556 if > 8 end
